--- a/Permissions/PermissionsLab/AndroidManifest.xml
+++ b/Permissions/PermissionsLab/AndroidManifest.xml
@@ -7,9 +7,11 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-
-    <!--  TODO - add uses-permission elements -->
-
+	
+    <!--  - add uses-permission elements -->
+	<uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
+	<uses-permission android:name="course.labs.permissions.DANGEROUS_ACTIVITY_PERM" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
