updated .gitignore; .gitignore active for existing index

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ tmp/
 local.properties
 .settings/
 .loadpath
+# avoid environment conflicts
+.classpath
 
 # External tool builders
 .externalToolBuilders/
@@ -53,4 +55,4 @@ local.properties
 .target
 
 # TeXlipse plugin
-.texlipse
+.aexlipse
